# multivariate-modeling

./: README.md  cray-xc40-installation-script.sh
hicma/chameleon/: .gitignore  .gitlab-ci-env.sh  .gitlab-ci.yml  .gitmodules  AUTOCOMPLETE.org  CMakeLists.txt  CONTRIBUTING.org  CTestConfig.cmake  ChangeLog  LICENCE.txt  README.org  READMEDEV.org
hicma/chameleon/cmake_modules/: GenPkgConfig.cmake  PrintOpts.cmake  gitlab-ci-initial-cache.cmake
hicma/chameleon/compute/: CMakeLists.txt  pzbuild.c  pzgebrd_ge2gb.c  pzgelqf.c  pzgelqf_param.c  pzgelqfrh.c  pzgemm.c  pzgeqrf.c  pzgeqrf_param.c  pzgeqrfrh.c  pzgetrf_incpiv.c  pzgetrf_nopiv.c  pzhemm.c  pzher2k.c  pzherk.c  pzhetrd_he2hb.c  pzlacpy.c  pzlag2c.c  pzlange.c  pzlanhe.c  pzlansy.c  pzlantr.c  pzlascal.c  pzlaset.c  pzlaset2.c  pzlauum.c  pzplghe.c  pzplgsy.c  pzplrnt.c  pzpotrf.c  pzpotrimm.c  pzsymm.c  pzsyr2k.c  pzsyrk.c  pzsytrf.c  pztile2band.c  pztpgqrt.c  pztpqrt.c  pztradd.c  pztrmm.c  (+78 more)
hicma/chameleon/control/: CMakeLists.txt  async.c  async.h  auxiliary.c  auxiliary.h  common.h  compute_z.h  context.c  context.h  control.c  descriptor.c  descriptor.h  gkkleader.h  global.h  morse_f77.c  morse_f77.h  morse_f90.f90  morse_mf77.c  morse_zcf90.F90  morse_zf77.c  morse_zf90.F90  morse_zf90_wrappers.F90  morsewinthread.c  morsewinthread.h  primes.h  tile.c  workspace.c  workspace.h  workspace_z.c
hicma/chameleon/coreblas/: CMakeLists.txt
hicma/chameleon/coreblas/compute/: CMakeLists.txt  core_dzasum.c  core_zaxpy.c  core_zgeadd.c  core_zgelqt.c  core_zgemm.c  core_zgeqrt.c  core_zgesplit.c  core_zgessm.c  core_zgessq.c  core_zgetf2_nopiv.c  core_zgetrf.c  core_zgetrf_incpiv.c  core_zgetrf_nopiv.c  core_zhe2ge.c  core_zhemm.c  core_zher2k.c  core_zherfb.c  core_zherk.c  core_zhessq.c  core_zlacpy.c  core_zlag2c.c  core_zlange.c  core_zlanhe.c  core_zlansy.c  core_zlantr.c  core_zlascal.c  core_zlaset.c  core_zlaset2.c  core_zlatro.c  core_zlauum.c  core_zpamm.c  core_zparfb.c  core_zpemv.c  core_zplghe.c  core_zplgsy.c  core_zplrnt.c  core_zpotrf.c  core_zssssm.c  core_zsymm.c  (+28 more)
hicma/chameleon/coreblas/eztrace_module/: CMakeLists.txt  coreblas_eztrace_module
hicma/chameleon/coreblas/include/: CMakeLists.txt
hicma/chameleon/cudablas/compute/: CMakeLists.txt  cuda_zgeadd.c  cuda_zgelqt.c  cuda_zgemerge.c  cuda_zgemm.c  cuda_zgeqrt.c  cuda_zgessm.c  cuda_zgetrf.c  cuda_zhemm.c  cuda_zher2k.c  cuda_zherfb.c  cuda_zherk.c  cuda_zlarfb.c  cuda_zlauum.c  cuda_zparfb.c  cuda_zpotrf.c  cuda_zssssm.c  cuda_zsymm.c  cuda_zsyr2k.c  cuda_zsyrk.c  cuda_ztpmqrt.c  cuda_ztrmm.c  cuda_ztrsm.c  cuda_ztrtri.c  cuda_ztslqt.c  cuda_ztsmlq.c  cuda_ztsmqr.c  cuda_ztsqrt.c  cuda_ztstrf.c  cuda_zttmqr.c  cuda_zunmlqt.c  cuda_zunmqrt.c  cudaglobal.c
hicma/chameleon/cudablas/eztrace_module/: CMakeLists.txt  cudablas_eztrace_module
hicma/chameleon/cudablas/include/: CMakeLists.txt
hicma/chameleon/distrib/spack/: install_dependencies.sh
hicma/chameleon/doc/: CMakeLists.txt
hicma/chameleon/doc/doxygen/: CMakeLists.txt  conf-dev-quark.dox.in  conf-dev-starpu.dox.in  conf-usr-quark.dox.in  conf-usr-starpu.dox.in  groups-usr.dox  main.dox
hicma/chameleon/doc/orgmode/: CMakeLists.txt  users_guide.org.in  version.org.in
hicma/chameleon/example/: CMakeLists.txt
hicma/chameleon/example/basic_zposv/: CMakeLists.txt  CTestLists.cmake  basic_posv.h  posv_morse_functions.h  posv_users_functions.h  zposv_morse_functions.c  zposv_users_functions.c
hicma/chameleon/example/lapack_to_morse/: CMakeLists.txt  CTestLists.cmake  lapack_to_morse.h  step0.c  step0.h  step1.c  step1.h  step2.c  step2.h  step3.c  step3.h  step4.c  step4.h  step5.c  step5.h  step6.c  step6.h  step7.c  step7.h
hicma/chameleon/example/link_chameleon/: CMakeLists.txt  README.org  link_chameleon.c  link_chameleon.f90
hicma/chameleon/example/out_of_core/: CMakeLists.txt  CTestLists.cmake  out_of_core.c  out_of_core.h
hicma/chameleon/include/: CMakeLists.txt
hicma/chameleon/include/chameleon/: chameleon_config.h.in  chameleon_timer.h  morse_fortran.h
hicma/chameleon/lib/pkgconfig/: chameleon.pc.in  coreblas.pc.in  cudablas.pc.in
hicma/chameleon/plasma-conversion/: callGeneration.bash  fileConversion.py  fileCopy.py  generate_morseSrc.py  rulesSubstitutions.py
hicma/chameleon/plasma-conversion/insert-licence/: chameleon_c.licence  chameleon_f.licence  insert-licence-chameleon.sh
hicma/chameleon/runtime/: CMakeLists.txt
hicma/chameleon/runtime/parsec/: CMakeLists.txt
hicma/chameleon/runtime/quark/: CMakeLists.txt
hicma/chameleon/runtime/starpu/: CMakeLists.txt
hicma/chameleon/simucore/: CMakeLists.txt
hicma/chameleon/testing/: CMakeLists.txt  CTestLists.cmake  chameleon_testing.py  testing_zauxiliary.c  testing_zauxiliary.h  testing_zgeadd.c  testing_zgels.c  testing_zgels_hqr.c  testing_zgels_systolic.c  testing_zgemm.c  testing_zgeqrf_qdwh.c  testing_zgesv_incpiv.c  testing_zgesvd.c  testing_zheevd.c  testing_zhemm.c  testing_zher2k.c  testing_zherk.c  testing_zlange.c  testing_zpemv.c  testing_zposv.c  testing_zpotri.c  testing_zsymm.c  testing_zsyr2k.c  testing_zsyrk.c  testing_ztrmm.c  testing_ztrsm.c
hicma/chameleon/testing/lin/: CMakeLists.txt  aladhd.f  alaerh.f  alaesm.f  alahd.f  alareq.f  alasum.f  alasvm.f  cchkaa.f  cchkge.f  (+273 more)
hicma/chameleon/timing/: CMakeLists.txt  CTestLists.cmake  flops.h  time_zgelqf.c  time_zgelqf_tile.c  time_zgels.c  time_zgels_tile.c  time_zgemm.c  time_zgemm_tile.c  time_zgeqrf.c  time_zgeqrf_hqr.c  time_zgeqrf_hqr_tile.c  time_zgeqrf_tile.c  time_zgeqrs_tile.c  time_zgesv_incpiv.c  time_zgesv_incpiv_tile.c  time_zgesv_nopiv.c  time_zgesv_nopiv_tile.c  time_zgesvd_tile.c  time_zgetrf_incpiv.c  time_zgetrf_incpiv_tile.c  time_zgetrf_nopiv.c  time_zgetrf_nopiv_tile.c  time_zgetri_tile.c  time_zgetrs_incpiv_tile.c  time_zgetrs_nopiv_tile.c  time_zheevd_tile.c  time_zlange.c  time_zlange_tile.c  time_zposv.c  time_zposv_tile.c  time_zpotrf.c  time_zpotrf_tile.c  time_zpotri_tile.c  time_zpotrs_tile.c  time_zsytrf_tile.c  time_ztrsm.c  timing.c  timing.h  timing_zauxiliary.c  (+1 more)
hicma/chameleon/tools/: analysis.sh
(+299 files in other folders)
